--- a/index.html
+++ b/index.html
@@ -120,14 +120,30 @@
         text-decoration: none;
     }</style>
 
+    <meta property="og:title" content="Детский массаж - Хельсинки">
+    <meta property="og:image" content="assets/images/0545_001.jpeg">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://epil.fi">
+    <meta property="og:description" content="Детский массаж в Хельсинки">
+    <link rel="shortcut icon" href="assets/images/271056576-624732822186176-9043319397383122821-n-121x121.jpg"
+          type="image/x-icon">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Детский массаж, Детский массаж Хельсинки, массаж, грудничек, студия детского массажа, финлядния, хельсинки">
+    <meta content="детский масса, хельсинки, массаж, дети, новорожденный, Аника, Anika Finska, массаж новорожденных, лечебный массаж" lang="ru-RU" name="keywords">
     <meta name="author" content="">
     <meta name="csrf" content="6QPes:e46684dd6c0f12178365421b2ae22884" id="csrf">
-    <link rel="shortcut icon" href="https://tilda.cc/img/tildafavicon.ico">
+<!--    <link rel="shortcut icon" href="https://tilda.cc/img/tildafavicon.ico">-->
 
-    <title>Tilda: Copy of Детский массаж - Аника</title>
+    <title>Детский массаж - Хельсинки</title>
 
      <script src="assets/js/jquery-1.10.2.min.js" type="text/javascript"></script>
 
@@ -296,7 +312,7 @@
                 <div class="t282__menu__content t282__col-12">
                     <div class="t282__logo__container" style="min-height:80px;">
                         <div class="t282__logo__content">
-                            <a class="t282__logo" href="https://tilda.cc/"
+                            <a class="t282__logo" href="/"
                                style="color:#000000;font-size:20px;font-weight:700;text-transform:uppercase;letter-spacing:1px;">
                                 <img class="t280__logo__img"
                                      src="assets/images/271056576-6247328221.jpeg"
@@ -399,12 +415,12 @@
              style="background-image: -webkit-linear-gradient(top, rgb(204, 204, 204), rgb(119, 119, 119)); height: 100vh;">
 
             <div class="t-cover__carrier" id="coverCarry486437268" data-content-cover-id="486437268"
-                 data-content-cover-bg="https://static.tildacdn.com/tild3735-3363-4163-b231-303331636633/0545_001.jpeg"
+                 data-content-cover-bg="assets/images/0545_001.jpeg"
                  data-content-cover-height="100vh" data-content-cover-parallax=""
-                 style="background-image:url(&#39;https://static.tildacdn.com/tild3735-3363-4163-b231-303331636633/0545_001.jpeg&#39;);height:100vh;background-attachment:scroll; "
+                 style="background-image:url(&#39;assets/images/0545_001.jpeg&#39;);height:100vh;background-attachment:scroll; "
                  itemscope="" itemtype="http://schema.org/ImageObject">
                 <meta itemprop="image"
-                      content="https://static.tildacdn.com/tild3735-3363-4163-b231-303331636633/0545_001.jpeg">
+                      content="assets/images/0545_001.jpeg">
             </div>
 
             <div class="t-cover__filter"
@@ -482,12 +498,12 @@
              style="background-image: -webkit-linear-gradient(top, rgb(204, 204, 204), rgb(119, 119, 119)); height: 100vh;">
 
             <div class="t-cover__carrier" id="coverCarry486437271" data-content-cover-id="486437271"
-                 data-content-cover-bg="https://static.tildacdn.com/tild3262-6136-4963-b131-613938643937/IMG_8683_1.JPG"
+                 data-content-cover-bg="assets/images/IMG_8683_1.jpeg"
                  data-content-cover-height="100vh" data-content-cover-parallax="fixed"
-                 style="background-image:url(&#39;https://static.tildacdn.com/tild3262-6136-4963-b131-613938643937/IMG_8683_1.JPG&#39;);height:100vh; "
+                 style="background-image:url(&#39;assets/images/IMG_8683_1.jpeg&#39;);height:100vh; "
                  itemscope="" itemtype="http://schema.org/ImageObject">
                 <meta itemprop="image"
-                      content="https://static.tildacdn.com/tild3262-6136-4963-b131-613938643937/IMG_8683_1.JPG">
+                      content="assets/images/IMG_8683_1.jpeg">
             </div>
 
             <div class="t-cover__filter"
@@ -547,32 +563,32 @@
                 <div class="t251__col t251__col_left">
                     <div class="t251__block" itemscope="" itemtype="http://schema.org/ImageObject">
                         <meta itemprop="image"
-                              content="https://static.tildacdn.com/tild6366-6562-4637-b066-326634353137/IMG_1988.JPG">
+                              content="assets/images/IMG_1988.jpeg">
                         <div class="t251__bg t-bgimg t-zoomable" bgimgfield="img"
-                             data-original="https://static.tildacdn.com/tild6366-6562-4637-b066-326634353137/IMG_1988.JPG"
+                             data-original="assets/images/IMG_1988.jpeg"
                              data-zoomable="yes"
-                             data-img-zoom-url="https://static.tildacdn.com/tild6366-6562-4637-b066-326634353137/IMG_1988.JPG"
-                             style="background-image: url(&#39;https://static.tildacdn.com/tild6366-6562-4637-b066-326634353137/IMG_1988.JPG&#39;)"></div>
+                             data-img-zoom-url="assets/images/IMG_1988.jpeg"
+                             style="background-image: url(&#39;assets/images/IMG_1988.jpeg&#39;)"></div>
                     </div>
                 </div>
                 <div class="t251__col t251__col_right">
                     <div class="t251__block t251__block_small" itemscope="" itemtype="http://schema.org/ImageObject">
                         <meta itemprop="image"
-                              content="https://static.tildacdn.com/tild6237-6431-4632-b134-643966643332/274057842_4912494056.jpeg">
+                              content="assets/images/274057842_4912494056.jpeg">
                         <div class="t251__bg t251__bg_small t-bgimg t-zoomable"
-                             data-original="https://static.tildacdn.com/tild6237-6431-4632-b134-643966643332/274057842_4912494056.jpeg"
+                             data-original="assets/images/274057842_4912494056.jpeg"
                              bgimgfield="img1" data-zoomable="yes"
-                             data-img-zoom-url="https://static.tildacdn.com/tild6237-6431-4632-b134-643966643332/274057842_4912494056.jpeg"
-                             style="background-image: url(&#39;https://static.tildacdn.com/tild6237-6431-4632-b134-643966643332/274057842_4912494056.jpeg&#39;)"></div>
+                             data-img-zoom-url="assets/images/274057842_4912494056.jpeg"
+                             style="background-image: url(&#39;assets/images/274057842_4912494056.jpeg&#39;)"></div>
                     </div>
                     <div class="t251__block t251__block_small" itemscope="" itemtype="http://schema.org/ImageObject">
                         <meta itemprop="image"
-                              content="https://static.tildacdn.com/tild3234-6134-4166-a462-616263313663/277373601_6522068925.jpeg">
+                              content="assets/images/277373601_6522068925.jpeg">
                         <div class="t251__bg t251__bg_small t-bgimg t-zoomable"
-                             data-original="https://static.tildacdn.com/tild3234-6134-4166-a462-616263313663/277373601_6522068925.jpeg"
+                             data-original="assets/images/277373601_6522068925.jpeg"
                              bgimgfield="img2" data-zoomable="yes"
-                             data-img-zoom-url="https://static.tildacdn.com/tild3234-6134-4166-a462-616263313663/277373601_6522068925.jpeg"
-                             style="background-image: url(&#39;https://static.tildacdn.com/tild3234-6134-4166-a462-616263313663/277373601_6522068925.jpeg&#39;)"></div>
+                             data-img-zoom-url="assets/images/277373601_6522068925.jpeg"
+                             style="background-image: url(&#39;assets/images/277373601_6522068925.jpeg&#39;)"></div>
                     </div>
                 </div>
             </div>
