--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <meta property="og:image" content="assets/images/0545_001.jpeg">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://epil.fi">
-    <meta property="og:description" content="Детский массаж в Хельсинки">
+    <meta property="og:description" content="Аника работает в столичном регионе Финляндии с выездом на дом или с удовольствием примет вас в своей уютной студии на Херттониеми (Хельсинки)">
     <link rel="shortcut icon" href="assets/images/271056576-624732822186176-9043319397383122821-n-121x121.jpg"
           type="image/x-icon">
 
