--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                                 data-animate-group="yes"
                                 style="color: rgb(0, 0, 0); text-transform: uppercase; transition-delay: 0s;"
                                 field="title"><br>
-                                <p style="text-align: right;">Детский массаж ХелЬсинки</p></h1>
+                                <p style="text-align: right;">Детский массаж Хельсинки</p></h1>
 
                             <div class="t102__descr t-descr t-descr_md t-animate t-animate_started"
                                  data-animate-style="fadeinup" data-animate-group="yes" style="transition-delay: 0.3s;"
