trying add new language

--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
                                      style="height: 80px;" imgfield="img" alt="" role="presentation">
                             </a>
                         </div>
+                        <div><a href="en.html">EN</a>/ <a href="index.html"> RU</a></div>
                     </div>
                 </div>
             </div>
