--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
                             <div class="t102__descr t-descr t-descr_md t-animate t-animate_started"
                                  data-animate-style="fadeinup" data-animate-group="yes" style="transition-delay: 0.3s;"
-                                 field="descr"><span style="color: rgb(8, 8, 8);">Hitsaajankatu 6, Helsinki</span></div>
+                                 field="descr"><span style="color: rgb(8, 8, 8);">Mäkelänkatu 52a, Helsinki</span></div>
 
                             <span class="space"></span>
                         </div>
@@ -710,7 +710,7 @@
                              style="width:100px;" alt="" role="presentation">
 
                         <div class="t567__title t-name t-name_xl" style="" field="title2">Адрес</div>
-                        <div class="t567__descr t-text t-text_sm" style="" field="descr2">Hitsaajankatu 6,<br>HELSINKI
+                        <div class="t567__descr t-text t-text_sm" style="" field="descr2">Mäkelänkatu 52a<br>HELSINKI
                         </div>
                     </div>
                 </div>
@@ -724,7 +724,7 @@
 
                         <div class="t567__title t-name t-name_xl" style="" field="title3">Как добраться</div>
                         <div class="t567__descr t-text t-text_sm" style="" field="descr3">Около салона есть парковка,
-                            ближайшее метро «herttoniemi».
+                            ближайшее метро «sörnäinen».
                         </div>
                     </div>
                 </div>
@@ -1136,7 +1136,7 @@
                                             <div style="position: relative; padding-right: 6px; padding-left: 6px; box-sizing: border-box; font-family: Roboto, Arial, sans-serif; font-size: 10px; color: rgb(0, 0, 0); white-space: nowrap; direction: ltr; text-align: right; vertical-align: middle; display: inline-block;">
                                                 <a target="_blank" rel="noopener"
                                                    title="Report errors in the road map or imagery to Google" dir="ltr"
-                                                   href="https://www.google.com/maps/@60.1934335,25.0262383,14z/data=!10m1!1e1!12b1?source=apiv3&amp;rapsrc=apiv3"
+                                                   href="https://www.google.com/maps/@60.19661710,24.95130010,14z/data=!10m1!1e1!12b1?source=apiv3&amp;rapsrc=apiv3"
                                                    style="font-family: Roboto, Arial, sans-serif; font-size: 10px; color: rgb(0, 0, 0); text-decoration: none; position: relative;">Report
                                                     a map error</a></div>
                                         </div>
@@ -1151,8 +1151,8 @@
                             {
                                 title: "Levani",
                                 descr: "",
-                                lat: "60.19343345138792",
-                                lng: "25.026238340231448",
+                                lat: "60.19661710",
+                                lng: "24.95130010",
                             },
                         ];
 
