--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                             развиваться мышечной и костной ткани ребенка. В занятиях есть лечебные, укрепляющие,
                             развивающие приемы плюс элементы гимнастики.<br><br>Аника работает в столичном регионе
                             Финляндии с выездом на дом или с удовольствием примет вас в своей уютной студии на
-                            Херттониеми (Хельсинки)
+                            Mäkelänkatu (Хельсинки)
                         </div>
                     </div>
                 </div>
