--- a/ru.html
+++ b/ru.html
@@ -21,10 +21,12 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <meta property="og:url" content="http://levani-studio.tilda.ws/page30059117.html">
+    <meta property="og:url" content="http://massage.epil.fi/ru.html">
     <meta property="og:title" content="Детский массаж">
     <meta property="og:description" content="Детский массаж в Хельсинки">
     <meta property="og:type" content="website">
+    <meta property="og:image"
+          content="https://thumb.tildacdn.com/tild3735-3363-4163-b231-303331636633/-/format/webp/0545_001.jpeg">
 
     <link rel="shortcut icon" href="https://static.tildacdn.info/img/tildafavicon.ico" type="image/x-icon">
     <!-- Assets -->
