--- a/en.html
+++ b/en.html
@@ -20,12 +20,12 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <meta property="og:url" content="http://levani-studio.tilda.ws/page30059117.html">
+    <meta property="og:url" content="http://massage.epil.fi/en.html">
     <meta property="og:title" content="Children's Massage">
     <meta property="og:description" content="Children's Massage in Helsinki">
     <meta property="og:type" content="website">
     <meta property="og:image"
-          content="https://static.tildacdn.info/tild6666-3663-4539-a666-383130383733/-/resize/504x/271056576-6247328221.jpeg">
+          content="https://thumb.tildacdn.com/tild3735-3363-4163-b231-303331636633/-/format/webp/0545_001.jpeg">
     <link rel="canonical" href="http://levani-studio.tilda.ws/page30059117.html"><!--/metatextblock-->
 
     <link rel="shortcut icon" href="https://static.tildacdn.info/img/tildafavicon.ico" type="image/x-icon">
