--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     <meta name="theme-color" content="#ffffff">
 
 
-    <meta property="og:url" content="http://levani-studio.tilda.ws/page30059117.html">
+    <meta property="og:url" content="http://massage.epil.fi/index.html">
     <meta property="og:title" content="Lasten hieronta Helsingissä">
     <meta property="og:description" content="Lasten hieronta Helsingissä">
     <meta property="og:type" content="website">
     <meta property="og:image"
-          content="https://static.tildacdn.info/tild6666-3663-4539-a666-383130383733/-/resize/504x/271056576-6247328221.jpeg">
-    <link rel="canonical" href="http://levani-studio.tilda.ws/page30059117.html"><!--/metatextblock-->
+          content="https://thumb.tildacdn.com/tild3735-3363-4163-b231-303331636633/-/format/webp/0545_001.jpeg">
 
     <script type="text/javascript" async="" id="tildastatscript"
             src="./assets/tilda-stat-1.0.min.js"></script>
