--- a/en.html
+++ b/en.html
@@ -22,7 +22,7 @@
 
     <meta property="og:url" content="http://massage.epil.fi/en.html">
     <meta property="og:title" content="Children's Massage">
-    <meta property="og:description" content="Children's Massage in Helsinki">
+    <meta property="og:description" content="Anika works in the capital region of Finland, offering home visits or would be pleased to welcome you to her cozy studio at Mäkelänkatu 52a (Helsinki).">
     <meta property="og:type" content="website">
     <meta property="og:image"
           content="https://thumb.tildacdn.com/tild3735-3363-4163-b231-303331636633/-/format/webp/0545_001.jpeg">
