--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <meta property="og:url" content="http://massage.epil.fi/index.html">
     <meta property="og:title" content="Lasten hieronta Helsingissä">
-    <meta property="og:description" content="Lasten hieronta Helsingissä">
+    <meta property="og:description" content="Anika työskentelee pääkaupunkiseudulla Suomessa tarjoten kotikäyntejä tai ottaen teidät mielellään vastaan viihtyisässä studiollaan osoitteessa Mäkelänkatu 52a (Helsinki).">
+
     <meta property="og:type" content="website">
     <meta property="og:image"
           content="https://thumb.tildacdn.com/tild3735-3363-4163-b231-303331636633/-/format/webp/0545_001.jpeg">
