--- a/ru.html
+++ b/ru.html
@@ -23,7 +23,7 @@
 
     <meta property="og:url" content="http://massage.epil.fi/ru.html">
     <meta property="og:title" content="Детский массаж">
-    <meta property="og:description" content="Детский массаж в Хельсинки">
+    <meta property="og:description" content="Аника работает в столичном регионе Финляндии с выездом на дом или с удовольствием примет вас в своей уютной студии на Mäkelänkatu 52a (Хельсинки)">
     <meta property="og:type" content="website">
     <meta property="og:image"
           content="https://thumb.tildacdn.com/tild3735-3363-4163-b231-303331636633/-/format/webp/0545_001.jpeg">
