--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                     <div class="t-cover__wrapper t-valign_middle" style="height: 1010px;">
                         <div class="t102 t-align_center" data-hook-content="covercontent">
                             <div class="t102__title t-title" style="text-transform:uppercase;" field="title">
-                                ERIKOISLÄÄKÄRI
+                                Hieroja
                             </div>
                             <span class="space"></span></div>
                     </div>
