--- a/en.html
+++ b/en.html
@@ -4,12 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--metatextblock-->
 
-    <title>Children's Massage in Helsinki</title>
+    <title>Newborn massage in helsinki</title>
 
 
     <meta name="description" content="Children's Massage in Helsinki">
 
-    <meta content="kids massage helsinki, maasage for kids, kids, massage, children's massage, massage, children's massage in Helsinki, infant massage, newborn massage, children's massage in Helsinki, massage.epil.fi" lang="en-EN" name="keywords">
+    <meta content="Newborn massage, newborn massage in helsinki, kids massage helsinki, maasage for kids, kids, massage, children's massage, massage, children's massage in Helsinki, infant massage, newborn massage, children's massage in Helsinki, massage.epil.fi" lang="en-EN" name="keywords">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -21,7 +21,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta property="og:url" content="http://massage.epil.fi/en.html">
-    <meta property="og:title" content="Children's Massage">
+    <meta property="og:title" content="Newborn massage">
     <meta property="og:description" content="Anika works in the capital region of Finland, offering home visits or would be pleased to welcome you to her cozy studio at Mäkelänkatu 52a (Helsinki).">
     <meta property="og:type" content="website">
     <meta property="og:image"
@@ -625,7 +625,7 @@
                                 data-animate-group="yes"
                                 style="color: rgb(0, 0, 0); text-transform: uppercase; transition-delay: 0s;"
                                 field="title"><br>
-                                <p style="text-align: right;">Children's Massage Helsinki</p></h1>
+                                <p style="text-align: right;">Newborn massage helsinki</p></h1>
                             <div class="t102__descr t-descr t-descr_md t-animate t-animate_started"
                                  data-animate-style="fadeinup" data-animate-group="yes" style="transition-delay: 0.3s;"
                                  field="descr">Mäkelänkatu 52a, Helsinki
