--- a/ru.html
+++ b/ru.html
@@ -23,7 +23,7 @@
 
     <meta property="og:url" content="http://massage.epil.fi/ru.html">
     <meta property="og:title" content="Детский массаж">
-    <meta property="og:description" content="Аника работает в столичном регионе Финляндии с выездом на дом или с удовольствием примет вас в своей уютной студии на Mäkelänkatu 52a (Хельсинки)">
+    <meta property="og:description" content="Аника работает в столичном регионе Финляндии с выездом на дом или с удовольствием примет вас в своей уютной студии на Koskelantie 5 (Хельсинки)">
     <meta property="og:type" content="website">
     <meta property="og:image"
           content="https://thumb.tildacdn.com/tild3735-3363-4163-b231-303331636633/-/format/webp/0545_001.jpeg">
@@ -628,7 +628,7 @@
                                 <p style="text-align: right;">Детский массаж ХелЬсинки</p></h1>
                             <div class="t102__descr t-descr t-descr_md t-animate t-animate_started"
                                  data-animate-style="fadeinup" data-animate-group="yes" style="transition-delay: 0.3s;"
-                                 field="descr">Mäkelänkatu 52a, Helsinki
+                                 field="descr">Koskelantie 5, Helsinki
                             </div>
                             <span class="space"></span></div>
                     </div>
@@ -773,7 +773,7 @@
                         <div class="t681__tablewrapper">
                             <div class="t681__textwrapper">
                                 <div class="t681__price t-descr t-descr_sm" style="" field="li_descr__1493289538895">-
-                                    Массаж в студии Mäkelänkatu 52a
+                                    Массаж в студии Koskelantie 5
                                 </div>
                             </div>
                             <div class="t681__pricewrapper">
@@ -852,7 +852,7 @@
                                                          data-original="https://static.tildacdn.info/tild3363-3837-4130-b437-656264396531/pink_lacation.png"
                                                          imgfield="img2" style="width:100px;" alt="">
                         <div class="t567__title t-name t-name_xl" style="" field="title2">Адрес</div>
-                        <div class="t567__descr t-text t-text_sm" style="" field="descr2">Mäkelänkatu 52a<br>Helsinki
+                        <div class="t567__descr t-text t-text_sm" style="" field="descr2">Koskelantie 5<br>Helsinki
                         </div>
                     </div>
                 </div>
@@ -883,9 +883,9 @@
                     <script type="text/javascript">var arMapMarkers486437274 = [
                         {
                             title: "Levani",
-                            descr: "",
-                            lat: "60.19671305993684",
-                            lng: "24.951278640667937",
+                            descr: "Baby massage",
+                            lat: "60.208399348179114",
+                            lng: "24.94679140022974",
                             color: null,
                             url: null,
                             isOpen: false,
@@ -943,7 +943,7 @@
                 <div class="t-col t-col_6 t-prefix_3">
                     <div class="t046__text t-text t-text_xs" style="color:#fbfbfb;" field="text">
                         <strong>Yhteystiedot</strong><br>"Levani.Studio"<br>Levani Group Oy<br>Y-tunnus:
-                        3259213-5<br><br>Mäkelänkatu 52a<br>00550 Helsinki <br><span
+                        3259213-5<br><br>Koskelantie 5<br>00550 Helsinki <br><span
                             style="color: rgb(123, 123, 123);"> </span></div>
                 </div>
             </div>
