fixed parking places

--- a/en.html
+++ b/en.html
@@ -868,8 +868,7 @@
                                                          data-original="https://static.tildacdn.info/tild3338-3434-4537-b739-323064373561/pink_car.png"
                                                          imgfield="img3" style="width:100px;" alt="">
                         <div class="t567__title t-name t-name_xl" style="" field="title3">How to arrive</div>
-                        <div class="t567__descr t-text t-text_sm" style="" field="descr3">There is parking near the salon,
-                            the nearest metro is «Sörnäinen».
+                        <div class="t567__descr t-text t-text_sm" style="" field="descr3">Rakennuksen ympärillä on paljon ilmaisia pysäköintipaikkoja.
                         </div>
                     </div>
                 </div>
