--- a/index.html
+++ b/index.html
@@ -869,8 +869,7 @@
                                                          data-original="https://static.tildacdn.info/tild3338-3434-4537-b739-323064373561/pink_car.png"
                                                          imgfield="img3" style="width:100px;" alt="">
                         <div class="t567__title t-name t-name_xl" style="" field="title3">Kuinka päästä perille</div>
-                        <div class="t567__descr t-text t-text_sm" style="" field="descr3">Salon läheisyydessä on pysäköintimahdollisuus,
-                            lähin metroasema on  «Sörnäinen».
+                        <div class="t567__descr t-text t-text_sm" style="" field="descr3">Rakennuksen ympärillä on paljon ilmaisia pysäköintipaikkoja.
                         </div>
                     </div>
                 </div>
