--- a/ru.html
+++ b/ru.html
@@ -863,8 +863,7 @@
                                                          data-original="https://static.tildacdn.info/tild3338-3434-4537-b739-323064373561/pink_car.png"
                                                          imgfield="img3" style="width:100px;" alt="">
                         <div class="t567__title t-name t-name_xl" style="" field="title3">Как добраться</div>
-                        <div class="t567__descr t-text t-text_sm" style="" field="descr3">Около салона есть парковка,
-                            ближайшее метро «Sörnäinen».
+                        <div class="t567__descr t-text t-text_sm" style="" field="descr3">Вокруг здания есть множество бесплатных парковочных мест.
                         </div>
                     </div>
                 </div>
