removed Massage at Home

--- a/ru.html
+++ b/ru.html
@@ -784,27 +784,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="t681__row t-row">
-                    <div class="t-col t-col_2 t-prefix_2">
-                        <div class="t681__title t-heading t-heading_sm" style="text-transform:uppercase;"
-                             field="li_title__1493292137724">Массаж Дома
-                        </div>
-                    </div>
-                    <div class="t-col t-col_6 ">
-                        <div class="t681__tablewrapper">
-                            <div class="t681__textwrapper">
-                                <div class="t681__price t-descr t-descr_sm" style="" field="li_descr__1493292137724">-
-                                    Массаж с выездом на дом (зависит от адреса)
-                                </div>
-                            </div>
-                            <div class="t681__pricewrapper">
-                                <div class="t681__price t-heading t-heading_sm" style=""
-                                     field="li_title2__1493292137724" data-redactor-toolbar="no">€50
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="t681__row t-row">-->
+<!--                    <div class="t-col t-col_2 t-prefix_2">-->
+<!--                        <div class="t681__title t-heading t-heading_sm" style="text-transform:uppercase;"-->
+<!--                             field="li_title__1493292137724">Массаж Дома-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="t-col t-col_6 ">-->
+<!--                        <div class="t681__tablewrapper">-->
+<!--                            <div class="t681__textwrapper">-->
+<!--                                <div class="t681__price t-descr t-descr_sm" style="" field="li_descr__1493292137724">- -->
+<!--                                    Массаж с выездом на дом (зависит от адреса)-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="t681__pricewrapper">-->
+<!--                                <div class="t681__price t-heading t-heading_sm" style=""-->
+<!--                                     field="li_title2__1493292137724" data-redactor-toolbar="no">€50-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
             <div class="t-section__container t-container">
                 <div class="t-col t-col_12">
